Move Class-Path: manifest expansion into classgraph-classpath
A jarfile can add more elements to the classpath than the classloader
listed: the jarfiles in its automatic lib dirs, and the entries of its
manifest's Class-Path and Bundle-ClassPath attributes. Only the scanner
knew how to follow those, so ClassPathFinder returned a classpath that
was not complete.

The logic is now a shared, pure function in ClasspathExpander, which
returns the child entries in the order they must be added to the
classpath. Each caller drives its own recursion and assigns its own
index from that list order, so classpath order -- and therefore which of
two copies of a class masks the other -- does not depend on which
jarfile finishes opening first.

ClasspathElementZip and ClasspathElementDir now call it instead of
holding their own copies. Class-Path and Bundle-ClassPath entries are
logged as a result, which they were not before.

ClassPathFinder.find() now returns the expanded classpath, following the
declarations recursively and listing an element that is reached more
than once only at the first position it is reached at. Reading a
manifest means opening the jarfile, so ClassPath is now AutoCloseable
and owns the handler that opened them; the entries can still be read
after it is closed.

Also adds ClassPathFinder.enableURLScheme(String) -- ClassPathSpec had
the field, but the finder had no way to set it.